# artificial-intelligence-hardware-course

laba1/: main.cpp
laba2/: main.py  second_lab.py  tests.py
laba3/: run.sh  run_test.sh  setup.py
laba3/cli/: app.py
laba3/tests/: test_logic_minimization_engine.py  tests.py
laba3/views/: expression_nodes.py  formula_analysis_tools.py  formula_tree_generator.py  karnaugh_map_processor.py  logic_minimization_engine.py  qm_algorithm_handler.py  tabular_optimizer.py  truth_table_analyzer.py
laba4/: aois-laba-4-1.circ  aois-laba-4-2.circ
laba4/aois-laba-4/: main.py  minimized_pdnf_by_calculation_method.py
laba5/: aois-laba-5.circ
laba5/aois-laba-5/: main.py  minimized_pdnf_by_calculation_method.py
laba6/: .gitignore  CMakeLists.txt  run_guide.txt  run_tests.sh
laba6/include/: avl_tree.h  hash_table.h  pair.h
laba6/src/: avl_tree.cpp  hash_table.cpp  main.cpp
laba6/tests/: CMakeLists.txt  test_avl_tree.cpp  test_hash_table.cpp
laba7/: app.py  main.py  run.sh  run_tests.sh  test.py
